--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"description": "",
 	"version": "0.0.0",
 	"dependencies": {
-		"react-dom": "16.2.0",
-		"react": "16.2.0",
-		"prop-types": "15.6.0",
+		"lodash.isequal": "4.5.0",
 		"popmotion": "8.1.3",
-		"lodash.isequal": "4.5.0"
+		"prop-types": "15.6.0",
+		"react": "16.2.0",
+		"react-dom": "16.2.0"
 	},
 	"devDependencies": {
 		"react-scripts": "1.0.0"
